...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sample_title" />

...
                android:id="@+id/text_view_original_languange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_original_languange"/>

            <ImageView
                android:id="@+id/image_view_favourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_favorite_24"
                android:contentDescription="@string/favourite_button" />

...
